--- a/supervised/02_regression/01_linear_regression_normal_equation.ipynb
+++ b/supervised/02_regression/01_linear_regression_normal_equation.ipynb
@@ -72,7 +72,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -89,10 +89,9 @@
       "metadata": {
         "id": "UDbWnF8rdceb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4ce340e-8008-4206-fbaf-cc19172e07e6"
+        "outputId": "5ed1bc9f-e3e2-4ae2-c886-5c3d86d9a791"
       },
       "source": [
         "X1 = np.array([1, 2, 3, 4, 5, 6])\n",
@@ -103,7 +102,7 @@
         "print(f'Wynagrodzenie: {Y}')\n",
         "print(f'Liczba próbek: {m}')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,17 +120,16 @@
       "metadata": {
         "id": "qCl-HE9pZDp7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 137
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b8003f8-83c3-4918-e979-f575a70fced5"
+        "outputId": "7efaf28a-ae00-4eb1-8abf-9598b19eddda"
       },
       "source": [
         "X1 = X1.reshape(m, 1)\n",
         "print(X1)\n",
         "print(X1.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,17 +151,16 @@
       "metadata": {
         "id": "1J5bEXehZPVO",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 137
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f4eacfe5-e11f-437b-d528-52984cee59c9"
+        "outputId": "b3a5c369-d9d4-495e-8a18-1997b0f0c460"
       },
       "source": [
         "bias = np.ones((m, 1))\n",
         "print(bias)\n",
         "print(bias.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,17 +182,16 @@
       "metadata": {
         "id": "25475QsYZznI",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 137
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e91bc128-d230-47cc-dbe7-736feb2e1924"
+        "outputId": "3bae9d6f-767b-41e1-e401-df5b19da43a6"
       },
       "source": [
         "X = np.append(bias, X1, axis=1)\n",
         "print(X)\n",
         "print(X.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,15 +231,14 @@
       "metadata": {
         "id": "Y9VWdotwoJ74",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d07a27fe-76c4-4e97-b8ab-6dead318f6ef"
+        "outputId": "e6287869-363f-41be-9906-19c10dcb06e1"
       },
       "source": [
         "np.dot(X.T, X)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,16 +260,15 @@
       "metadata": {
         "id": "Pzxu92NaaGaV",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f0e353d-5470-4df8-94dc-91d747795d19"
+        "outputId": "61051f0e-c92b-4b9e-ae3c-e5c73951027e"
       },
       "source": [
         "L = np.linalg.inv(np.dot(X.T, X))\n",
         "L"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,16 +290,15 @@
       "metadata": {
         "id": "xXjqb8XPaaYK",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "193ca273-fc42-4a51-e703-34d278c2398d"
+        "outputId": "a11d9ec7-f95d-4aa0-83ab-430da608402b"
       },
       "source": [
         "P = np.dot(X.T, Y)\n",
         "P"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,15 +319,14 @@
       "metadata": {
         "id": "L0hewPqOae06",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e690a55e-e973-4e81-c138-8448f7df8997"
+        "outputId": "715eb6ce-6d90-46ee-defa-4562230de485"
       },
       "source": [
         "np.dot(L, P)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,10 +365,9 @@
       "metadata": {
         "id": "jDjBjL7noVGj",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0eb290a-3aac-4ce7-e0f9-0faabf06c3cc"
+        "outputId": "0f2634a1-d279-4def-a366-4688d3880608"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
@@ -387,7 +378,7 @@
         "print(regression.intercept_)\n",
         "print(regression.coef_[0])"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
